<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android">

    <include layout="@layout/question_header" />

    <TextView xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/q1_text"
        android:textColor="@color/black"
        android:textSize="20sp" />

    <RadioGroup
        android:id="@+id/q1_radio_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:orientation="vertical">

        <RadioButton
            android:id="@+id/q1_op1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/q1_o1" />

        <RadioButton
            android:id="@+id/q1_op2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/q1_o2" />

        <RadioButton
            android:id="@+id/q1_op3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/q1_o3" />

        <RadioButton
            android:id="@+id/q1_op4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/q1_o4" />

        <RadioButton
            android:id="@+id/q1_op5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/q1_o5" />

    </RadioGroup>

</merge>